monitoring/elk/ingress-apm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apm-ingress
  namespace: devsecops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  rules:
    - host: apm.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apm-server
                port:
                  number: 8200
